# Watchnt

./: .env.example  .gitignore  .prettierignore  ENGINEERING_DOCS.md  IMPLEMENTATION_PLAN.md  Makefile  PROJECT.md  README.md  WatchNT_Browser_Architecture_Blueprint.md  architecture.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-lock.yaml.3867623749  pnpm-workspace.yaml  prettier.config.js  spec.md  tasks.md  tsconfig.json  turbo.json  vitest.config.ts
backend/: Dockerfile  config.py  main.py  requirements.txt  test_insert.py  watchnt.db
docs/: architecture.md  implementation-plan.md  interfaces.md  testing.md
extension/: dashboard.html  index.html  manifest.json  offscreen.html  offscreen.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/: Dockerfile  (+1 more)
server/: Dockerfile  auth.js  db.js  index.js  package.json  pyproject.toml
server/app/: main.py
server/app/ai/: embeddings.py  llm.py  pipeline.py
server/app/ai/prompts/: action_items.py  context.py  decisions.py  summary.py
server/app/api/v1/: meetings.py  router.py
server/app/core/: config.py
server/app/services/: export_service.py
server/app/templates/: meeting_export.html  meeting_export.md
server/app/workers/: celery_app.py  diarization.py  embedding.py  intelligence.py  transcription.py
server/db/: schema.sql
server/routes/: auth.js  cards.js  embed.js  export.js  llm.js  search.js  sources.js  transcribe.js  youtube.js
server/tests/: integration.js
(+218 files in other folders)
