[tool.poetry]
name = "watchnt-server"
version = "2.0.0"
description = "Watchn't AI Copilot Backend"
authors = ["Engineering <eng@watchnt.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
celery = {extras = ["redis"], version = "^5.3.4"}
faster-whisper = "^0.9.0"
pyannote-audio = "^3.1.1"
torch = "^2.0.0"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
litellm = "^1.28.0"
jinja2 = "^3.1.2"
weasyprint = "^60.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
